--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,26 @@
 @font-face {
-  font-family: "Dangrek";
-  src: local("Dangrek"), url(./assets/Dangrek-Regular.ttf) format("truetype");
+  font-family: "Fredoka";
+  src: local("Fredoka"), url(./assets/Fredoka-Bold.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Commissioner";
+  src: local("Commissioner"),
+    url(./assets/Commissioner-Regular.ttf) format("truetype");
 }
 
 :root {
   --blue: #5da2f4;
-  --cream: #fff8f0;
+  --cream: #fbf7f1;
   --yellow: #ffba69;
+  --grey: #4f4f4f;
+  --green: #52d29c;
+  --white: #ffffff;
 }
 
 * {
-  font-family: Dangrek;
-  background-color: var(--cream);
+  font-family: Fredoka;
+  background-color: var(--white);
 }
 
 a:link {
@@ -39,13 +48,12 @@ body::-webkit-scrollbar {
 }
 
 .nav__all {
-  background-color: var(--cream);
+  background-color: var(--white);
   display: flex;
   flex-direction: row;
   align-items: center;
   padding: 0px;
   margin: 0px;
-  padding-bottom: 20px;
   justify-content: space-between;
 }
 
@@ -53,7 +61,9 @@ body::-webkit-scrollbar {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   margin-left: 5vw;
+  height: 10vh;
 }
 
 .nav__name {
@@ -67,8 +77,7 @@ body::-webkit-scrollbar {
 
 #nav__titles {
   display: flex;
-  position: absolute;
-  top: 50px;
+  position: relative;
 }
 
 .nav__title {
@@ -192,7 +201,7 @@ body::-webkit-scrollbar {
   margin: 15px;
   opacity: 0;
   transition: 0.5s ease;
-  background-color: var(--yellow);
+  background-color: var(--green);
 }
 
 .work__container:hover .work__overlay {
@@ -202,7 +211,7 @@ body::-webkit-scrollbar {
 
 .work__text {
   color: white;
-  background-color: var(--yellow);
+  background-color: var(--green);
   font-size: 3em;
   position: absolute;
   top: 50%;
@@ -214,48 +223,134 @@ body::-webkit-scrollbar {
 }
 
 .single__imgs {
-  width: 40vw;
-  padding: 10px;
-  margin: 10px;
-  background-color: white;
+  position: relative;
+  height: 50vw;
+  padding: 0px;
+  margin-right: 30px;
+  z-index: 1;
   box-shadow: 4px 4px 5px 0px rgba(246, 177, 103, 0.207);
 }
 
-.single__horz__container {
-  display: flex;
-  flex-direction: row;
-  align-items: flex-end;
-  justify-content: center;
+.single__imgs__square {
+  position: relative;
+  z-index: 1;
+  height: 50vw;
+  margin: 30px;
+  background-color: var(--cream);
+  box-shadow: 5px 5px 5px 0px rgba(246, 177, 103, 0.499);
 }
 
-.single__vert__container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+.single__img__container {
+  position: relative;
+  width: 50vw;
+  height: 50vw;
+  margin-right: 4vw;
 }
 
-.single__para {
+.single__imgs__initial,
+.single__imgs__overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.single__imgs__overlay {
+  opacity: 0;
+}
+
+.single__img__container:hover > .single__imgs__overlay {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.single__imgs__small__square {
+  width: 32vw;
+  box-shadow: 4px 4px 5px 0px rgba(246, 177, 103, 0.207);
+}
+
+.single__para__square {
   text-align: center;
   color: var(--blue);
   font-size: 1.3em;
-  width: 50vw;
+  width: 80vw;
   height: fit-content;
   padding-top: 10vh;
   padding-bottom: 10vh;
   margin: 10px;
 }
 
+.single__horz__container {
+  margin: 0px;
+  margin-top: 20px;
+  padding: 0px;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+  justify-content: center;
+}
+
+.single__spacer {
+  background-color: red;
+  width: 40px;
+  height: 47vw;
+}
+
+.single__vert__container {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  height: 50vw;
+}
+
+.single__title {
+  padding-bottom: 1vw;
+  text-align: center;
+  color: var(--green);
+  font-size: 1.9em;
+  width: auto;
+  margin: 0px;
+}
+
+.card {
+  width: 47px;
+  margin: 30px;
+  background-color: var(--cream);
+  box-shadow: 5px 5px 5px 0px rgba(246, 177, 103, 0.499);
+  position: absolute;
+}
+.card #img-top {
+  width: 47px;
+  display: none;
+}
+
+.card:hover .img-top {
+  display: inline;
+}
+
+.single__para {
+  font-family: Commissioner;
+  text-align: left;
+  color: var(--grey);
+  font-size: 1vw;
+  width: 30vw;
+  height: fit-content;
+  margin: 0px;
+}
+
 .single__imgs__small {
   width: 25vw;
   height: auto;
-  padding: 10px;
-  margin: 10px;
-  background-color: white;
+  margin-right: 15px;
   box-shadow: 4px 4px 5px 0px rgba(246, 177, 103, 0.207);
 }
 
-@media only screen and (max-width: 880px) {
+@media only screen and (max-width: 905px) {
   .nav__all {
     display: flex;
     flex-direction: column;
@@ -268,23 +363,27 @@ body::-webkit-scrollbar {
   }
 
   .nav__name {
+    margin: 0px;
     font-size: 3em;
     letter-spacing: 10px;
     text-indent: 0px;
   }
   #nav__titles {
+    margin: 0px;
     display: none;
+    height: fit-content;
+  }
+
+  .nav__options {
+    margin: 0px;
+    padding: 0px;
+    display: flex;
+    position: relative;
   }
 
   .nav__option {
     font-size: 1.5em;
     margin: 0px 35px;
-  }
-
-  .nav__options {
-    display: flex;
-    position: absolute;
-    top: 50px;
   }
 
   #about__me {
