--- a/src/App.css
+++ b/src/App.css
@@ -232,17 +232,25 @@ body::-webkit-scrollbar {
 }
 
 .single__imgs__square {
-  position: relative;
-  z-index: 1;
-  height: 50vw;
-  margin: 30px;
-  background-color: var(--cream);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   box-shadow: 5px 5px 5px 0px rgba(246, 177, 103, 0.499);
 }
 
 .single__img__container {
   position: relative;
   width: 50vw;
+  height: 50vw;
+  margin-right: 4vw;
+}
+
+.single__img__container__portrait {
+  position: relative;
+  width: 40vw;
   height: 50vw;
   margin-right: 4vw;
 }
@@ -264,9 +272,11 @@ body::-webkit-scrollbar {
 
 .single__img__container:hover > .single__imgs__overlay {
   opacity: 1;
-  cursor: pointer;
 }
 
+.single__img__container__portrait:hover > .single__imgs__overlay {
+  opacity: 1;
+}
 .single__imgs__small__square {
   width: 32vw;
   box-shadow: 4px 4px 5px 0px rgba(246, 177, 103, 0.207);
@@ -347,6 +357,28 @@ body::-webkit-scrollbar {
   width: 25vw;
   height: auto;
   margin-right: 15px;
+  box-shadow: 4px 4px 5px 0px rgba(246, 177, 103, 0.207);
+}
+
+.single__imgs__med {
+  width: 35vw;
+  height: auto;
+  margin-right: 15px;
+  box-shadow: 4px 4px 5px 0px rgba(246, 177, 103, 0.207);
+}
+
+.single__vert__container__centered {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.single__imgs__banner {
+  width: 76vw;
+  height: auto;
+  margin: 0px;
+  margin-top: 20px;
   box-shadow: 4px 4px 5px 0px rgba(246, 177, 103, 0.207);
 }
 
