--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,7 @@ body::-webkit-scrollbar {
 
 .about__all {
   text-align: left;
-  color: var(--yellow);
+  color: var(--green);
   margin-left: 15vw;
   margin-right: 15vw;
 }
@@ -122,13 +122,9 @@ body::-webkit-scrollbar {
 #about__para {
   text-align: left;
   font-size: 1.5em;
-}
-
-#plant {
-  position: absolute;
-  left: 30px;
-  bottom: 50px;
-  width: 160px;
+  font-family: commissioner;
+  color: var(--grey);
+  width: 60vw;
 }
 
 .highlight {
@@ -136,11 +132,10 @@ body::-webkit-scrollbar {
 }
 
 #contact__title {
-  font-size: 3.5em;
+  font-size: 3em;
   color: var(--blue);
-  text-align: center;
-  letter-spacing: 10px;
-  margin-top: 150px;
+  text-align: left;
+  margin-top: 5vh;
 }
 
 .contact__logolink {
@@ -159,7 +154,7 @@ body::-webkit-scrollbar {
 
 .contact__link {
   margin: 10px;
-  color: var(--yellow);
+  color: var(--green);
   font-size: 2.5em;
   letter-spacing: 5px;
 }
@@ -201,7 +196,7 @@ body::-webkit-scrollbar {
   margin: 15px;
   opacity: 0;
   transition: 0.5s ease;
-  background-color: var(--green);
+  background-color: var(--white);
 }
 
 .work__container:hover .work__overlay {
@@ -210,8 +205,8 @@ body::-webkit-scrollbar {
 }
 
 .work__text {
-  color: white;
-  background-color: var(--green);
+  color: var(--grey);
+  background-color: var(--white);
   font-size: 3em;
   position: absolute;
   top: 50%;
@@ -227,6 +222,15 @@ body::-webkit-scrollbar {
   height: 50vw;
   padding: 0px;
   margin-right: 30px;
+  z-index: 1;
+  box-shadow: 4px 4px 5px 0px rgba(246, 177, 103, 0.207);
+}
+
+.single__imgs__novella {
+  position: relative;
+  height: 50vw;
+  padding: 0px;
+  margin-right: 12.5vw;
   z-index: 1;
   box-shadow: 4px 4px 5px 0px rgba(246, 177, 103, 0.207);
 }
@@ -417,6 +421,30 @@ body::-webkit-scrollbar {
   height: 50vw;
 }
 
+.single__vert__container__top {
+  display: none;
+}
+
+.single__horz__container__about {
+  margin: 0px;
+  margin-top: 20px;
+  padding: 0px;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.photo {
+  position: relative;
+  margin: 20px;
+  padding: 0px;
+  width: 10px;
+  height: 192px;
+  background-color: red;
+}
+
 @media only screen and (max-width: 905px) {
   .nav__all {
     display: flex;
@@ -462,15 +490,23 @@ body::-webkit-scrollbar {
   }
 
   #contact__title {
-    font-size: 2.25em;
+    font-size: 1.5em;
   }
 
   .contact__logo {
-    width: 30px;
+    width: 25px;
+    margin: 0px;
   }
 
   .contact__link {
-    font-size: 1.5em;
+    font-size: 1.3em;
+    margin-left: 5px;
+  }
+
+  .single__horz__container__about {
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
   }
 
   .work__imgs {
@@ -534,6 +570,18 @@ body::-webkit-scrollbar {
     width: 80vw;
   }
 
+  .single__vert__container__top {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 80vw;
+  }
+
+  .single__vert__container__bottom {
+    display: none;
+  }
+
   .single__vert__container__portrait {
     display: flex;
     flex-direction: column;
@@ -544,5 +592,11 @@ body::-webkit-scrollbar {
 
   .single__title {
     padding-top: 2vh;
+  }
+
+  .single__imgs__novella {
+    margin-right: 0vw;
+    width: 80vw;
+    height: auto;
   }
 }
