--- a/src/App.css
+++ b/src/App.css
@@ -196,17 +196,19 @@ body::-webkit-scrollbar {
   margin: 15px;
   opacity: 0;
   transition: 0.5s ease;
-  background-color: var(--white);
+  background-color: rgba(255, 255, 255, 0.279);
+  backdrop-filter: blur(3px);
 }
 
 .work__container:hover .work__overlay {
-  opacity: 0.75;
+  opacity: 1;
   cursor: pointer;
 }
 
 .work__text {
-  color: var(--grey);
-  background-color: var(--white);
+  color: var(--white);
+  backdrop-filter: blur(0px);
+  background-color: rgba(0, 0, 0, 0);
   font-size: 3em;
   position: absolute;
   top: 50%;
