--- a/src/App.css
+++ b/src/App.css
@@ -131,11 +131,12 @@ body::-webkit-scrollbar {
   color: var(--blue);
 }
 
-#contact__title {
+#contact__para {
   font-size: 3em;
-  color: var(--blue);
+  color: var(--grey);
   text-align: left;
   margin-top: 5vh;
+  font-family: commissioner;
 }
 
 .contact__logolink {
@@ -438,6 +439,11 @@ body::-webkit-scrollbar {
   justify-content: center;
 }
 
+#contact__title {
+  margin-top: 10vh;
+  font-size: 4em;
+}
+
 .photo {
   position: relative;
   margin: 20px;
@@ -488,11 +494,16 @@ body::-webkit-scrollbar {
   }
 
   #about__para {
-    font-size: 1.25em;
+    font-size: 1em;
   }
 
   #contact__title {
-    font-size: 1.5em;
+    margin-top: 15vh;
+    font-size: 2.5em;
+  }
+
+  #contact__para {
+    font-size: 1.4em;
   }
 
   .contact__logo {
@@ -501,7 +512,7 @@ body::-webkit-scrollbar {
   }
 
   .contact__link {
-    font-size: 1.3em;
+    font-size: 4vw;
     margin-left: 5px;
   }
 
