--- a/src/App.css
+++ b/src/App.css
@@ -135,7 +135,6 @@ body::-webkit-scrollbar {
   font-size: 3em;
   color: var(--grey);
   text-align: left;
-  margin-top: 5vh;
   font-family: commissioner;
 }
 
@@ -210,7 +209,7 @@ body::-webkit-scrollbar {
   color: var(--white);
   backdrop-filter: blur(0px);
   background-color: rgba(0, 0, 0, 0);
-  font-size: 3em;
+  font-size: 2em;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -498,16 +497,17 @@ body::-webkit-scrollbar {
   }
 
   #contact__title {
-    margin-top: 15vh;
+    margin-top: 7vh;
     font-size: 2.5em;
+    text-align: center;
   }
 
   #contact__para {
-    font-size: 1.4em;
+    font-size: 1.2em;
   }
 
   .contact__logo {
-    width: 25px;
+    width: 30px;
     margin: 0px;
   }
 
